Bug 1547193 - ANGLE cherry-pick environ solaris fix. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D34044